# prexum

./: .gitignore  Cargo.toml  build  deploy  dev  index.html  run
pub/: app.css  app.js  client.js  index.js  what.mjs
src/: main.rs
web/: app.tsx  build.ts  bun.lockb  client.ts  client.tsx  index.html  index.tsx  island.ts  layout.tsx  output.css  package.json  tailwind.config.js  tsconfig.json
web/islands/: counter.tsx
