[package]
name = "prexum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sysinfo = "0.31.2"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
